# Portfolio

./: .gitignore  README.md  README_local.md  interview-prep.md
analogcheck/: README.md  ic_errors.yaml  pspice_reference.txt  pyproject.toml
analogcheck/analogcheck/: __init__.py  __main__.py  checker.py  cli.py  config.py  conventions.py  llm_reasoning.py  parser.py  rag.py  raw_reader.py  report.py  runner.py
analogcheck/analogcheck.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
analogcheck/chroma_db/: chroma.sqlite3
analogcheck/conventions/: cfoa.yaml
analogcheck/tests/: test_parser.py
analogcheck/tests/netlists/: bad_multiplier.cir  ccii_current_conveyor.cir  ccii_current_conveyor_broken.cir  cfoa_inverting_amp.cir  cfoa_inverting_amp_broken.cir  missing_ground.cir  missing_title.cir
cap-multiplier/: README.md
opamp/: README.md
resume/: Prashant_Kumar_VLSI_Analog_Fresher_Resume.tex  resume_havells_ai.tex
thesis/: README.md
vcii-inductor/: README.md
