[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "analogcheck"
version = "0.1.0"
description = "SPICE netlist semantic error checker — catches sign/convention errors simulators miss"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["analogcheck*"]
